# middlebury-flowcode

./: .gitignore  CMakeLists.txt  README.md
colorflow/: CMakeLists.txt  colorflow.cpp
colorflow/src/: FlowImage.cpp  FlowImage.h  colorflow.cpp
examples/: lmb-freiburg_flownet2_result.flo
windows/: build-windows.bat
